--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="redPokeball">#FFFF1D4B</color>
+    <color name="blackPokeball">#313131</color>
+    <color name="grayPokeball">#DDFFFFFF</color>
 </resources>
