--- a/app/src/main/res/layout/item_pokemon.xml
+++ b/app/src/main/res/layout/item_pokemon.xml
@@ -7,8 +7,8 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,27 +56,28 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/cardView"
+        app:layout_constraintStart_toStartOf="@id/cardView"
         app:layout_constraintTop_toBottomOf="@+id/item_txt_nome">
 
         <TextView
             android:id="@+id/item_txt_type1"
-            android:layout_width="130dp"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
+            android:maxWidth="80dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/txt_form_style"
             android:textColor="@color/white"
-            android:gravity="center_horizontal"
+            android:gravity="center"
             android:textAlignment="center"
             android:singleLine="true"
             tools:text="Leaf" />
 
         <TextView
             android:id="@+id/item_txt_type2"
-            android:layout_width="130dp"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
+            android:gravity="center"
             android:textAlignment="center"
             android:background="@drawable/txt_form_style"
             android:singleLine="true"
