--- a/app/src/main/res/layout/fragment_list_pokemon.xml
+++ b/app/src/main/res/layout/fragment_list_pokemon.xml
@@ -36,26 +36,17 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <Button
-        android:id="@+id/main_btn_pokedex"
-        style="@style/BottomForm"
-        android:text="@string/pokedex"
-        android:drawableRight="@drawable/pokebolas"
-        android:backgroundTint="@color/redPokeball"
-        app:layout_constraintStart_toStartOf="@+id/main_edt_dex_layout"
-        app:layout_constraintEnd_toStartOf="@id/main_btn_items"
-        app:layout_constraintTop_toBottomOf="@+id/main_edt_dex_layout" />
 
-    <Button
-        android:id="@+id/main_btn_items"
-        style="@style/BottomForm"
-        android:layout_marginEnd="8dp"
-        android:backgroundTint="@color/blueLight"
-        android:drawableRight="@drawable/items"
-        android:text="@string/items"
-        app:layout_constraintEnd_toEndOf="@id/main_edt_dex_layout"
-        app:layout_constraintStart_toEndOf="@+id/main_btn_pokedex"
-        app:layout_constraintTop_toBottomOf="@+id/main_edt_dex_layout" />
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_dex"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="24dp"
+        tools:listitem="@layout/item_pokemon"
+        tools:itemCount="6"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/main_edt_dex_layout"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
